<resources>
    <string name="app_name">Triple S</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remeber this user</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="string_not_a_user">Not a user? </string>
    <string name="register_here">Register here.</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="repassword">Repassword</string>
    <string name="email_is_empty">Email field is empty</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="phone_is_empty">Phone field is empty</string>
    <string name="phone_not_valid">Phone number is not valid</string>
    <string name="name_empty">Username field is empty</string>
    <string name="at_least_4_char">At least 4 characters</string>
    <string name="password_field_empty">Password field is empty</string>
    <string name="at_least_10_char">Min 10 characters, at least 1 letter and 1 number</string>
    <string name="repassword_field_empty">Repassword field is empty</string>
    <string name="two_password_not_identical">Two password fields not identical</string>
    <string name="ok">OK</string>
    <string name="email_alread_exist">Change the email, it is already exist</string>
    <string name="wrong_data_entered">Please be sure you are using the correct email address and password</string>
    <string name="internet_not_connected">You are not connected to the internet</string>
    <string name="check_connection">CHECK CONNECTION</string>
    <string name="connected_to_internet">You are connected to internet</string>
    <string name="welcome">WELCOME</string>
    <string name="login_from_here">Login from here</string>
    <string name="fill_your_info">Fill your info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_went_wrong_with_screen">Something went wrong with the screen</string>
    <string name="products">Our Products</string>
    <string name="details">Details</string>
    <string name="taxes_are_included">(taxes are included)</string>
    <string name="package_size">Package size</string>
    <string name="user_comments">User comments</string>
    <string name="no_comments">No comments</string>
    <string name="scan">Scan</string>
    <string name="total_invoice">Total Invoice</string>
    <string name="payment">Payment</string>
    <string name="barcode_camer_error">Something wrong with the bardcode please check the salesman or scan again carefully</string>
    <string name="please_scan_product">Please scan products using phone camera to add it</string>
    <string name="credit_cart">Credit Cart</string>
    <string name="cash">Cash</string>
    <string name="please_scan_qr">Please scan the QR code to checkout</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="please_wait_to_checkout">Please wait to checkout</string>
    <string name="credit_card">Credit Card</string>
    <string name="press_button_to_start_payment">Press to confirm the payment</string>
    <string name="no_product_added_yet">No products added yet</string>
    <string name="personal_account">Personal Account</string>
    <string name="about_us">About us</string>
    <string name="our_website">Our Website</string>
    <string name="invoices">Invoices</string>
    <string name="logout">Logout</string>
    <string name="title_activity_website">WebsiteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about">We are a group of developers who seek to develop society and change it by using technology to turn it into a digital society and we seek to achieve this through our project to transform daily purchases in stores more better to save people\'s time by changing the purchase process itself and eliminating dependence on the human factor so that the customer can Buy what he wants without having to stand in broad queues to pay the account and waste his time</string>
    <string name="there_is_no_invoices">There is no invoices to display</string>
    <string name="update_user">Update user information</string>
    <string name="join_date">Join Date</string>
</resources>