<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/registration_logo_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/carti_logo_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registration_fill_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_your_info"
            android:textColor="@color/primary_green"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_logo_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_username_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_fill_info_text"
            app:layout_constraintWidth_percent="0.69"
            app:startIconDrawable="@drawable/username_ic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_username_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_username_layout"
            app:layout_constraintWidth_percent="0.69"
            app:startIconDrawable="@drawable/email_ic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_email_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_phone_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_email_layout"
            app:layout_constraintWidth_percent="0.69"
            app:startIconDrawable="@drawable/phone_ic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_phone_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_phone_layout"
            app:layout_constraintWidth_percent="0.69"
            app:startIconDrawable="@drawable/password_ic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_password_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_repassword_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/repassword"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_password_layout"
            app:layout_constraintWidth_percent="0.69"
            app:startIconDrawable="@drawable/password_ic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_repassword_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
            />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registration_sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_repassword_layout"
            app:layout_constraintWidth_percent="0.69" />

        <TextView
            android:id="@+id/registration_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login_from_here"
            android:textColor="@color/primary_green"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_sign_up_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

   </ScrollView>